# autofit

./: .env  .eslintcache  .gitignore  README.md  Untitled Diagram.drawio
.dvc/: config
.github/: contributing.md  pull_request_template.md
BlazePoseBarracuda/: .gitignore
abdominal/: .eslintrc.json  .gitignore  .prettierignore  .versionrc.json  README.md  electron-builder.json5  index.html  package.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: README.md  docker-compose.yml
csvAnimationConverter-master/: jointFrames2021-12-20-17-38-14.json  narrow.json  sq-1227-1.json  sq-1228_2.json  sq-1231.json  strKey2.json  wide.json
docs/: .gitignore  Dockerfile  README.md  action.yml  entrypoint.sh
electron/: .eslintignore  .eslintrc.json  .gitignore  .versionrc.json  CHANGELOG.md  README.md  index.html  log.dvc  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
electron-mac/: .eslintrc.json  README.md  README.zh-CN.md  index.html  package.json  tsconfig.json
form-record/: package.json  tsconfig.eslint.json
front/: .gitignore  README.md  data.dvc  proto.py  requirements.txt  run.sh  training_report_pdf.py  training_report_render_html.py  training_report_template.jinja
misc/: makeSoundFile.py  ss_form_instructions.csv  ss_form_instructions.md  ss_menu_instructions.csv
mlkit-vision/: .gitignore
mobile/: .eslintignore  .eslintrc.json  index.html  package.json  tsconfig.eslint.json  tsconfig.json  (+1 more)
python/multiple_cam_manager/: .gitignore  README.md  example.py  main.py  pyproject.toml
(+889 files in other folders)
